--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,7 +1,7 @@
 // Variables et styles de base
 $primary-font: Arial, sans-serif;
-$primary-color: #f56b2a;
-$secondary-color: #e80202;
+$primary-color: #f89e7d; 
+$secondary-color: #ea4545;
 $background-color: #f5f5f5;
 
 body {
@@ -14,7 +14,7 @@ body {
 
 // Styles pour Header
 header, .header {
-  background-color: #fff;
+  background: linear-gradient(to right, rgba(255,255,255,1), rgba(255,255,255,0.8));
   padding: 10px 20px;
   display: flex;
   justify-content: space-between;
@@ -34,7 +34,7 @@ header, .header {
       margin: 0 15px;
       text-decoration: none;
       color: $secondary-color;
-
+      font-weight: 600;
       &:hover {
         color: $primary-color;
       }
@@ -59,7 +59,7 @@ header, .header {
   padding: 50px;
   text-align: center;
   margin: 0 30px;
-  /*color: white;*/
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
   font-size: 2rem;
   
   .banner-image {
@@ -131,6 +131,7 @@ header, .header {
 // Styles pour Listing
 .listing {
   padding: 20px;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
 
   .listing-image {
     width: 100%;
@@ -203,7 +204,7 @@ footer{
   .dropdown-section {
     margin-bottom: 20px;
     border: 1px solid #ffffff;
-    /*background-color: #ed6363;*/
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     margin-top: 30px;
 
     .dropdown-title {
@@ -212,7 +213,7 @@ footer{
       background-color: #e74c3c;
       color: white;
       font-weight: bold;
-      border-radius: 10px;
+      border-radius: 10px 10px 0 0; 
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -229,6 +230,7 @@ footer{
     border-top: 1px solid #ccc;
     color: red;
     margin-top: -5px;
+    border-radius: 0 0 10px 10px;
 }
   }
 }
@@ -267,10 +269,11 @@ footer{
 
 .appartement-detail {
   padding: 20px;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
 
   .appartement-image {
-    width: 100%;
-    height: auto;
+    width: 1600px;   /* Largeur fixe */
+    height: 400px;  /* Hauteur fixe */
     object-fit: cover;
     border-radius: 10px;
     margin-bottom: 20px;
