--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -594,7 +594,7 @@ footer {
     display: flex;
     flex-direction: row;
     align-items: flex-start; /* Alignement vertical au début */
-    justify-content: flex-start; /* Alignement horizontal à gauche */
+    justify-content: space-between; /* Alignement horizontal à gauche */
     margin-top: 15px; /* Marge en haut */
     margin-right: 0px; /* Marge à droite */
     margin-bottom: 15px; /* Marge en bas */
@@ -634,4 +634,32 @@ footer {
     font-weight: 600;
     font-size: x-small;
   }
+}
+
+/*version tablette *********version tablette*************************************/
+@media (min-width: 768px) and (max-width: 1024px) {
+  header, .header {
+    padding: 15px 30px; // Ajustez le padding
+  }
+
+  .banner-container {
+    height: 300px; // Augmentez la hauteur pour les tablettes
+  }
+
+  .locations {
+    grid-template-columns: repeat(2, 1fr); // Deux colonnes pour les cartes sur les tablettes
+    padding: 0; // Ajustez le padding
+    background-color: #ffffff;
+  }
+
+  .locations .card {
+    height: 300px; // Ajustez la hauteur des cartes
+  }
+
+  .appartement-detail .appartement-image {
+    width: 100%; // Utilisez une largeur relative
+    height: auto; // Ajustez la hauteur pour maintenir le ratio d'aspect
+  }
+
+  // Autres ajustements spécifiques aux tablettes...
 }
