--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -587,6 +587,7 @@ footer {
 
   .location {
     flex: 1; /* Permet au contenu principal de remplir l'espace disponible */
+    background-color: #ffffff;
   }
   header,
   .header {
@@ -662,4 +663,48 @@ footer {
   }
 
   // Autres ajustements spécifiques aux tablettes...
+}
+
+/***********$VERSION IPAD PRO **********/
+// Ajout de la requête média pour les tablettes
+@media (min-width: 768px) and (max-width: 1366px) {
+  body {
+    margin-left: 60px;
+    margin-right: 60px;
+    
+  }
+
+  .banner-container {
+    height: 300px; // Hauteur plus grande pour les tablettes
+    margin: 0 50px;
+  }
+
+  .locations {
+    grid-template-columns: repeat(2, 1fr); // 2 colonnes pour les tablettes
+    gap: 30px;
+    margin: 60px 50px;
+    background-color: #FFFFFF;
+  }
+
+  .locations .card {
+    height: 300px; // Hauteur plus grande pour les cartes
+    width: auto; // Largeur automatique pour s'adapter à la grille
+  }
+
+  header,
+  .header {
+    padding: 20px 50px; // Plus d'espace autour du header
+  }
+
+  nav a {
+    margin: 0 20px; // Espacement plus grand entre les liens
+    font-size: 1rem; // Taille de texte plus grande
+  }
+
+  .appartement-detail .appartement-image {
+    width: auto; // Largeur automatique pour s'adapter à la grille
+    height: 500px; // Hauteur fixe plus grande
+  }
+
+  // Autres styles spécifiques aux tablettes...
 }
